--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           >
         </div>
         <div class="right">
-         <div class="img1"><img data-scroll data-scroll-speed="-1" src="/page2 img2.webp" alt="" /></div>
-          <div class="img2"><img data-scroll data-scroll-speed="-1" src="/page2 img .webp" alt="" /></div>
+         <div class="img1"><img data-scroll data-scroll-speed="-1" src="page2 img2.webp" alt="" /></div>
+          <div class="img2"><img data-scroll data-scroll-speed="-1" src="page2 img .webp" alt="" /></div>
         
           
         </div>
@@ -153,7 +153,7 @@
 "></div>
         <div class="productimg">
           <div class="product">
-          <img data-scroll data-scroll-speed="0.8" src="/DSC0079_Dexter Kim.webp" alt="">
+          <img data-scroll data-scroll-speed="0.8" src="DSC0079_Dexter Kim.webp" alt="">
           <div data-scroll data-scroll-speed="-3" class="card">
             <div class="heading">
               <div class="dot"></div>
@@ -164,7 +164,7 @@
           </div>
         </div>
           <div class="product">
-          <img data-scroll data-scroll-speed="0.8" src="/AB5I2191_NikkiT0.webp" alt="">
+          <img data-scroll data-scroll-speed="0.8" src="AB5I2191_NikkiT0.webp" alt="">
           <div data-scroll data-scroll-speed="-3" class="card">
             <div class="heading">
               <div class="dot"></div>
@@ -175,7 +175,7 @@
           </div>
         </div>
           <div class="product">
-          <img  data-scroll data-scroll-speed="0.8" src="/Rectangle 220.webp" alt="">
+          <img  data-scroll data-scroll-speed="0.8" src="Rectangle 220.webp" alt="">
           <div data-scroll data-scroll-speed="-3" class="card">
             <div class="heading">
               <div class="dot"></div>
@@ -198,28 +198,28 @@
       <div id="page5">
         <div class="buyproduct">
           <div class="product">
-              <img src="/bookphoto.webp" alt="Product 1">
+              <img src="bookphoto.webp" alt="Product 1">
               <div class="description">
                   <h2>THE COOKBOOK DUO KIT</h2>
                   <p>$10</p>
               </div>
           </div>
           <div class="product">
-              <img src="/bagphoto.webp" alt="Product 2">
+              <img src="bagphoto.webp" alt="Product 2">
               <div class="description">
                   <h2>CHANGE THE COURSE COOK KIT</h2>
                   <p>$15</p>
               </div>
           </div>
           <div class="product">
-              <img src="/lotionphoto.webp" alt="Product 3">
+              <img src="lotionphoto.webp" alt="Product 3">
               <div class="description">
                   <h2>THE GOOD NIGHT'S SLEEP CARE PACK</h2>
                   <p>$20</p>
               </div>
           </div>
           <div class="product">
-              <img src="/candlephoto.webp" alt="Product 4">
+              <img src="candlephoto.webp" alt="Product 4">
               <div class="description">
                   <h2>TWO HUGE CANDLE</h2>
                   <p>$25</p>
@@ -332,8 +332,8 @@ AND GENEROUS.
       </div>
       <div  id="page7">
         <div class="imgsec">
-          <div><img data-scroll data-scroll-speed="-2" src="/imgpage7.webp" alt=""></div>
-          <div><img data-scroll data-scroll-speed="-2" src="/img2page7.webp" alt=""></div>
+          <div><img data-scroll data-scroll-speed="-2" src="imgpage7.webp" alt=""></div>
+          <div><img data-scroll data-scroll-speed="-2" src="img2page7.webp" alt=""></div>
         </div>
         <div class="content">
           <h1>our impact</h1>
