--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@ AND GENEROUS.
       </div>
       <div  id="page7">
         <div class="imgsec">
-          <div><img data-scroll data-scroll-speed="-2" src="imgpage7.webp" alt=""></div>
-          <div><img data-scroll data-scroll-speed="-2" src="img2page7.webp" alt=""></div>
+          <div><img data-scroll data-scroll-speed="-2" src="./imgpage7.webp" alt=""></div>
+          <div><img data-scroll data-scroll-speed="-2" src="./img2page7.webp" alt=""></div>
         </div>
         <div class="content">
           <h1>our impact</h1>
@@ -352,7 +352,7 @@ AND GENEROUS.
     </div>
     </form>
     <div class="logo">
-      <img src="/images.png" alt="">
+      <img src="./images.png" alt="">
     </div>
     <div class="addresses">
       <div class="left">
