--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="menu-line line-1"></div>
           <div class="menu-line line-2"></div>
       </div>
-      <img src="/shopping-cart-2-line.png" alt="" />
+      <img src="./shopping-cart-2-line.png" alt="" />
         </div>
        </div>
 
